# home-qr-generator

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile
home-qr-generator/: __main__.py
